# Graph_Drone

./: .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT_READY.md  FINAL_STATUS_2026-03-16.md  H200_BENCHMARK_GUIDE.md  MULTICLASS_VALIDATION_GUIDE.md  README.md  SESSION_2026-03-16_SUMMARY.md  STRESS_TEST_RESULTS.md  VERSIONS.md  findings.md  progress.md  pyproject.toml  requirements.txt  task_plan.md
.claude/: launch.json
.github/: BRANCH_PROTECTION_SETUP.md
artifacts/: california_metrics.csv  curvature_bins.csv  curvature_stability.csv  metrics_by_curvature_bin.csv
docs/: 2026-03-08-v5-prd.md  2026-03-23-afc-cross-dataset-lma-hypothesis.md  2026-03-23-afc-cross-dataset-lma-kickoff.md  2026-03-23-afc-cross-dataset-lma-rankloss.md  2026-03-23-afc-phase-b-anchor-exclusion.md  2026-03-23-afc-phase-b-california-router-instability.md  2026-03-23-afc-phase-b-claim-first.md  2026-03-23-afc-phase-b-frozen-router.md  2026-03-23-afc-phase-b-residual-objective.md  2026-03-23-afc-phase-b-residual-usefulness.md  2026-03-23-afc-research-handoff.md  2026-03-23-v13-reg-afc-revisit.md  2026-03-23-v13-reg-meta-prior-readiness.md  2026-03-23-v13-reg-stability.md  2026-03-23-v13-reg-usefulness-routing.md  2026-03-23-v13-regression-handoff.md  2026-03-24-v13-objectives-and-operating-model.md  2026-03-24-v13-reg-task-prior-handoff.md  RESEARCH_LOG.md  agents.md  git_doe_strategy.md  h200_migration_plan.md  h200_p0_setup.md  worktree_lineage.md  worktree_registry.json
experiments/: __init__.py
migration/: activate_h200_env.sh  bootstrap_h200.sh  codex_project_skills_manifest.json  run_p0_openml_multiseed.sh  run_p0_openml_split_sweep.sh  setup_git_and_cli.sh  summarize_p0_openml.py  summarize_p0_openml_split_sweep.py  validate_h200_stack.py
reports/: california_curvature_experiment.md  pr_0_metrics.json  pr_0_summary.md  tabarena_regression_compare_2026_03_19.md
research/: tabicl_inspiration.md
scripts/: analyze_binary_threshold_sensitivity.py  analyze_cross_dataset_view_tokens.py  audit_worktrees.py  benchmark_classification.py  benchmark_regression.py  bootstrap_h200.sh  export_skills_to_claude.py  launch_h200_benchmark.sh  prototype_task_conditioned_lma.py  record_research_finding.py  run_champion_challenger.py  run_comprehensive_h200_validation.py  run_full_tabarena_benchmark.py  run_geopoe_benchmark.py  run_h200_quick_benchmark_parallel.py  run_h200_validation_parallel.py  run_smart_benchmark.py  run_sprint.py  run_tabarena_benchmark.py  ux_test_agent.py  (+6 more)
(+719 files in other folders)
