[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-drone"
version = "2026.03.15"
description = "Multi-View Mixture-of-Specialists meta-model for tabular data. #10 on TabArena (43 datasets, 58 methods, no tuning)."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "RicardoLaMo", email = "the.richard.liu@gmail.com" }
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "tabpfn>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black",
    "isort",
]
benchmark = [
    "pandas>=2.0.0",
    "scipy>=1.11.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["graphdrone_fit*"]
