[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-drone"
version = "1.18.0"
description = "Multi-View Mixture-of-Specialists meta-model for tabular data. Independent regression (v1-width GORA) and classification (multi-view GeoPOE) engines."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "RicardoLaMo", email = "the.richard.liu@gmail.com" }
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "tabpfn>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black",
    "isort",
]
benchmark = [
    "pandas>=2.0.0",
    "scipy>=1.11.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["graphdrone_fit*"]
