[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-drone"
version = "1.19.0"
description = "Multi-View Mixture-of-Specialists meta-model for tabular data. Both engines beat TabPFN v2.5: regression ELO 1523.2, classification ELO 1502.2."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "RicardoLaMo", email = "the.richard.liu@gmail.com" }
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "tabpfn>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black",
    "isort",
]
benchmark = [
    "pandas>=2.0.0",
    "scipy>=1.11.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["graphdrone_fit*"]
